--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -25,8 +25,9 @@
     //public property of type NavigationManager called NavService. Add the [Inject] 
     public NavigationManager NavService { get; set; }
 
-    protected void HandleValidSubmit(Bug AddBug)
+    protected void HandleValidSubmit(Bug newBug)
     {
+        BugService.AddBug(newBug);
         NavService.NavigateTo("");
     }
 }
