--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -5,6 +5,8 @@
 <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title" />
 <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description" />
 <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority" />
+<DataAnnotationsValidator />
+<ValidationSummary />
 <button type="submit" >Add Bug</button>
 </EditForm> 
 
